--- a/index.html
+++ b/index.html
@@ -31,8 +31,23 @@
         </div>
     </div>
     <div class="weui_btn_area">
-        <a class="weui_btn weui_btn_primary" href="javascript:" id="showTooltips">登录</a>
+        <a class="weui_btn weui_btn_primary" href="#/index" id="showTooltips">登录</a>
     </div>
+</script>
+
+<script type="text/html" id="tpl_index">
+    <div class="userInfoPart">
+        <div class="ico_system">系统logo</div>
+        <div class="userInfoDiv">
+            <span class="shipName">启程号</span>
+        </div>
+    </div>
+    <ul class="navList">
+        <li class="navItem">信息列表</li>
+        <li class="navItem">信息登记</li>
+        <li class="navItem">系统设置</li>
+        <li class="navItem">用户信息</li>
+    </ul>
 </script>
 
 <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
