--- a/addCheckInfo.html
+++ b/addCheckInfo.html
@@ -20,7 +20,7 @@
         </h5>
         <ul class="info-part">
             <li>
-                <a class="item-link" href="javascipt:void(0)">
+                <a class="item-link" href="javascript:void(0)">
                     <div class="weui_panel_bd">
                         <div class="weui_media_box weui_media_text clearfix">
                             <h4 class="weui_media_title clearfix">
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li>
-                <a class="item-link" href="javascipt:void(0)">
+                <a class="item-link" href="javascript:void(0)">
                     <div class="weui_panel_bd">
                         <div class="weui_media_box weui_media_text">
                             <h4 class="weui_media_title clearfix">
