--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="nav-item-cont weui_tab_bd">
             <ul class="info-part">
                 <li>
-                    <a class="item-link" href="javascipt:void(0)">
+                    <a class="item-link" href="javascript:;">
                         <div class="weui_panel_bd">
                             <div class="weui_media_box weui_media_text clearfix">
                                 <h4 class="weui_media_title clearfix">
@@ -129,7 +129,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="item-link" href="javascipt:void(0)">
+                    <a class="item-link" href="javascript:void(0)">
                         <div class="weui_panel_bd">
                             <div class="weui_media_box weui_media_text">
                                 <h4 class="weui_media_title clearfix">
@@ -155,28 +155,28 @@
                 <div class="weui_cells weui_cells_access">
                     <a class="weui_cell" href="addCheckInfo.html">
                         <div class="weui_cell_bd weui_cell_primary">
-                            <p>PSC风险评估</p>
+                            <p class="jc-content">PSC风险评估</p>
                         </div>
                         <div class="weui_cell_ft">
                         </div>
                     </a>
                     <a class="weui_cell" href="javascript:;">
                         <div class="weui_cell_bd weui_cell_primary">
-                            <p>油公司检查</p>
+                            <p class="jc-content">油公司检查</p>
                         </div>
                         <div class="weui_cell_ft">
                         </div>
                     </a>
                     <a class="weui_cell" href="javascript:;">
                         <div class="weui_cell_bd weui_cell_primary">
-                            <p>船公司检查</p>
+                            <p class="jc-content">船公司检查</p>
                         </div>
                         <div class="weui_cell_ft">
                         </div>
                     </a>
                     <a class="weui_cell" href="javascript:;">
                         <div class="weui_cell_bd weui_cell_primary">
-                            <p>船舶自查</p>
+                            <p class="jc-content">船舶自查</p>
                         </div>
                         <div class="weui_cell_ft">
                         </div>
